# FUES

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  FUES.py  LICENSE  MANIFEST.in  README.md  RetirementPicture.ipynb  fella.py  fues-claude.sh  gen_tables.py  housing_plot.py  index.html  jupytext.toml  main.py  mkdocs.yml  pyproject.toml  requirements.txt  retirement.py  retirement_plot.py  run_and_log.sh  run_param_sweep.py  sitemap.xml  size.txt  size_report.txt  solvers.py  todo.md
.claude/agents/: bellman-architect.md  ceo.md  econ-model-maker.md
.cursor/agents/: bellman-architect.md  cal-newport.md  ceo.md  econ-code-critic.md  econ-model-maker.md  econ-tribe.md  math-econ-ceo.md  math-writing-ceo.md
.cursor/rules/: econ-model-maker.mdc
.github/workflows/: docs.yml
.ipynb_checkpoints/: HousingPicture-checkpoint.ipynb  RetirementPicture-checkpoint.ipynb  housing_plot-checkpoint.py  retirement_plot-checkpoint.py
.obsidian/: appearance.json  workspace.json
AI/: CLAUDE.md
FUES/: DCEGM.py  FUES.py  FUES2.py  RFC_simple.py  __init__.py  bonnFues.py  math_funcs.py
FUES/.ipynb_checkpoints/: math_funcs-checkpoint.py
FUES/Applications/: housing_frictions.py  retirement_choice.py
algorithm/fues-algorithm/: index.html
api/fues/: index.html
api/retirement/: index.html
changelog/: index.html
docs/: changelog.md  fues_algorithm_updates_aug2025.md  index.md  running-locally.md  running-on-gadi.md
docs/algorithm/: fues-algorithm.md
docs/api/: egm-ue.md  fues.md  helpers.md  retirement.md
docs/examples/: continuous_housing_model.md  durables.md  housing-renting.md  housing.md  index.md  retirement-api.md  retirement.md  retirement_choice_model.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: fues-interactive.js  mathjax.js  thebe-config.js
docs/notebooks/: durables_fues.ipynb  durables_fues_separable.ipynb  egm_fues_transparent.ipynb  retirement_fues.ipynb
docs/paper/: paper.aux  paper.fdb_latexmk  paper.fls  paper.tex
docs/reproducibility/: index.md
docs/start-here/: quickstart.md
docs/stylesheets/: extra.css
docs/tutorials/: index.md
examples/: README_OUTPUTS.md  __init__.py  _lazy.py  _mpi.py  durables.py  fella.py  housing_frictions.py  index.html  readme_examples.md  retirement.py  retirement_choice.py
examples/.ipynb_checkpoints/: retirement_choice-checkpoint.py
examples/durables/: HousingPicture.ipynb  durables.py  durables_plot.py  estimate.py  model.py  plot.py  run.py  settings.yml  solve.py
examples/durables2_0/: __init__.py  benchmark.py  callables.py  estimate.py  model.py  operators.py  plot.py  run.py  simulate.py  solution_scheme.md  solution_syntax.md  solve.py  transitions.py
examples/housing/: index.html
examples/housing-renting/: index.html
examples/housing_renting/: __init__.py  circuit_runner_solving.py  debug_results.py  egm_upper_envelope.py  fues_b.py  fues_c.py  model_factory.py  solve_runner.py  solve_single_model.py  tabulate_results.py  whisperer.py
examples/retirement/: __init__.py  benchmark.py  benchmarks.py  index.html  model.py  operators.py  plots.py  retirement_plot.py  run.py  run_experiment.py  solve.py  tables.py
experiments/durables/: __init__.py  run_durables.pbs  run_durables_tests.pbs
experiments/housing_renting/: .gpu_wrapper_1046802.sh  README.md  check_versions.pbs  param_sweep.py  param_sweep_v2.py  run_cuda_test.pbs  run_generate_income.pbs  run_housing_dgxa100_single.pbs  run_housing_gpuvolta.pbs  run_housing_h200_single.pbs  run_housing_single_core.sh  run_sweep_noPB.pbs  run_sweep_noPB_tax.pbs  run_sweep_noPB_test.sh  run_sweep_vfi_gpu.pbs  sweep.sh
experiments/results/: retirement_timing_sigma0.tex  retirement_timing_sigma05.tex
experiments/retirement/: README.md  retirement_timings.sh  run_experiment.py  run_retirement_single_core.sh  timing_deltas.yaml  timing_grids.yaml  timing_methods.yaml
helpers/: __init__.py  egm_upper_envelope.py  ue.py
replication/: README.md
results/: fella_timings.tex  mpi_sweep.csv  mpi_sweep.tex  retirement_timing.tex  single_core.csv  single_core.tex
scripts/: circuit_run_1.sh  circuit_run_mpi.sh  circuit_run_pool.sh  durables_plot.py  fella_plot.py  fellatimings.sh  housing_plot.py  hr_param_sweep.sh  hr_param_sweep_mpi.sh  move_housing_logs.sh  pull_gadi_results.sh  retirement_plot.py  setup_public_venv.sh  size.txt  size_report.txt
scripts/lib/: job_configs.sh
search/: search_index.json
settings/: settings.yml
setup/: interactive_session.sh  load_env.sh  setup.sh  setup_durables_est.sh  setup_venv.sh  update_and_activate.sh
tests/: test_durables2_simulate.py  test_durables_simulate.py  test_imports.py  test_kikku.py  test_local_imports.py  test_retirement.py
(+423 files in other folders)
