[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcsmm"
version = "0.6.0"
description = "Fast Upper Envelope Scan (Dobrescu & Shanker, 2022)."
readme = "README.md"
requires-python = ">=3.11"

# Core: just the FUES algorithm. No HARK, no consav, no heavy deps.
dependencies = [
  "numpy>=1.23",
  "numba",
  "scipy",
  "interpolation>=0.5.2",
  "ConSav",
  "quantecon",
]

[project.optional-dependencies]
# Durables estimation on Gadi: minimal deps, fast import, no sympy/HARK.
# Plotting deps (matplotlib/seaborn) are intentionally absent — `outputs`
# loads `.plots` lazily (PEP 562), and run.py imports plot functions only
# inside the branches that call them, so the sweep path never touches
# matplotlib/seaborn. Add them back if you need plots on Gadi.
durables-est = [
  "pyyaml",
  "quantecon",
  "kikku[estimation] @ git+https://github.com/bright-forest/kikku.git",
]
# Full examples (notebooks, benchmarks, all models)
examples = [
  "pyyaml", "matplotlib", "seaborn", "tqdm", "dill>=0.3.6",
  "econ-ark", "ConSav", "pykdtree>=1.3.12",
  "kikku @ git+https://github.com/bright-forest/kikku.git",
]
dev = [
  "pyyaml", "matplotlib", "seaborn", "tqdm", "dill>=0.3.6",
  "econ-ark", "ConSav", "pykdtree>=1.3.12",
  "kikku @ git+https://github.com/bright-forest/kikku.git",
  "pytest", "autopep8",
]
mpi = ["mpi4py>=3.1"]

[project.urls]
"Source" = "https://github.com/akshayshanker/FUES"
"Bug Tracker" = "https://github.com/akshayshanker/FUES/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dcsmm*"]
