[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcsmm"
version = "0.6.0"
description = "Fast Upper Envelope Scan (Dobrescu & Shanker, 2022)."
readme = "README.md"
requires-python = ">=3.11"

# Core = FUES + EGM_UE benchmark stack. Comparing FUES to DCEGM needs
# HARK (via econ-ark), and comparing to the consav upper-envelope engine
# needs ConSav, so both are in core. quantecon / matplotlib / seaborn /
# kikku etc. are applied-example territory and live in [examples].
dependencies = [
  "numpy>=1.23",
  "numba",
  "scipy",
  "interpolation>=0.5.2",
  "ConSav",
  "econ-ark",
]

# Three tiers. Pick one:
#   pip install -e .             → bare: FUES + EGM_UE benchmarks
#   pip install -e ".[examples]" → durables + retirement + notebooks + plots
#   pip install -e ".[dev]"      → [examples] + pytest + autopep8
[project.optional-dependencies]
# Everything the applied examples need on top of the core benchmark stack:
# applied models (quantecon), notebooks + plots (matplotlib, seaborn, tqdm),
# estimation flow (kikku[estimation], dill, pykdtree), config loading (pyyaml).
# This is what Gadi's setup_venv.sh installs.
examples = [
  "pyyaml",
  "matplotlib",
  "seaborn",
  "tqdm",
  "dill>=0.3.6",
  "quantecon",
  "pykdtree>=1.3.12",
  "kikku[estimation] @ git+https://github.com/bright-forest/kikku.git",
]
# Dev = [examples] + test + format. pip resolves the self-reference.
dev = [
  "dcsmm[examples]",
  "pytest",
  "autopep8",
]

[project.urls]
"Source" = "https://github.com/akshayshanker/FUES"
"Bug Tracker" = "https://github.com/akshayshanker/FUES/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dcsmm*"]
